made almost show/remove scheduled appointemnts

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Ergasia3/target/Ergasia2-1.0-SNAPSHOT/login.jsp
 Ergasia3/target/Ergasia2-1.0-SNAPSHOT/patient_main_environment.jsp
 Ergasia3/target/Ergasia2-1.0-SNAPSHOT/register-success.jsp
 Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/web.xml
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/ScheduledAppointments.jsp
