Doctor set availability bug fixed
A doctor was not able to set availability during the same time interval for different days

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@ Ergasia3/target/Ergasia2-1.0-SNAPSHOT/patient_main_environment.jsp
 Ergasia3/target/Ergasia2-1.0-SNAPSHOT/register-success.jsp
 Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/web.xml
 Ergasia3/target/Ergasia2-1.0-SNAPSHOT/ScheduledAppointments.jsp
+Ergasia3/Ergasia2.iml
+Ergasia3/.idea/workspace.xml
+Ergasia3/.idea/modules.xml
+Ergasia3/.idea/misc.xml
+Ergasia3/.idea/libraries/Maven__org_opentest4j_opentest4j_1_2_0.xml
+Ergasia3/.idea/libraries/Maven__org_junit_platform_junit_platform_engine_1_7_0.xml
+Ergasia3/.idea/libraries/Maven__org_junit_platform_junit_platform_commons_1_7_0.xml
+Ergasia3/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_engine_5_7_0.xml
+Ergasia3/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_api_5_7_0.xml
+Ergasia3/.idea/libraries/Maven__org_apiguardian_apiguardian_api_1_1_0.xml
+Ergasia3/.idea/libraries/Maven__javax_servlet_javax_servlet_api_4_0_1.xml
+Ergasia3/.idea/compiler.xml
+Ergasia3/.idea/artifacts/Ergasia2_war_exploded.xml
+Ergasia3/.idea/artifacts/Ergasia2_war.xml
