--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,39 @@ Ergasia3/.idea/libraries/Maven__javax_servlet_javax_servlet_api_4_0_1.xml
 Ergasia3/.idea/compiler.xml
 Ergasia3/.idea/artifacts/Ergasia2_war_exploded.xml
 Ergasia3/.idea/artifacts/Ergasia2_war.xml
+Ergasia3/target/classes/com/classes/Admin.class
+Ergasia3/target/classes/com/classes/Doctor.class
+Ergasia3/target/classes/com/classes/hash.class
+Ergasia3/target/classes/com/classes/Patient.class
+Ergasia3/target/classes/com/classes/Users.class
+Ergasia3/target/classes/com/servlets/AdminServlet.class
+Ergasia3/target/classes/com/servlets/DoctorServlet.class
+Ergasia3/target/classes/com/servlets/PatientServlet.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/add_new_admin.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/add_new_doctor.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/add_new_patient.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/admin_main_environment.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/appointmenthistory.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/AvailableDoctorAppointments.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/delete_admin.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/delete_doctor.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/delete_patient.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/doctor_main_environment.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/doctor_set_availability.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/doctor_view_appointments.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/fail.html
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/index.html
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/META-INF/MANIFEST.MF
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/register.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/success.jsp
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/classes/Admin.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/classes/Doctor.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/classes/hash.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/classes/Patient.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/classes/Users.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/servlets/AdminServlet.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/servlets/DoctorServlet.class
+Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/servlets/PatientServlet.class
+Ergasia3/.idea/vcs.xml
+Ergasia3/.idea/runConfigurations.xml
+Ergasia3/.idea/jarRepositories.xml
