--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ Ergasia3/target/Ergasia2-1.0-SNAPSHOT/WEB-INF/classes/com/servlets/PatientServle
 Ergasia3/.idea/vcs.xml
 Ergasia3/.idea/runConfigurations.xml
 Ergasia3/.idea/jarRepositories.xml
+Ergasia3/.idea/dataSources.xml
+Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e.xml
+Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_/schema/information_schema.FNRwLQ.meta
+Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_/schema/mysql.osA4Bg.meta
+Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_/schema/performance_schema.kIw0nw.meta
+Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_/schema/sys.zb4BAA.meta
