Extra Input validation added along with other features
+Username must be only alphabetical and numeric chars. Max len is 12(server side)

+Username format check during login(server side)

+When admin adds a user, the age format is being checked on server side as well

+Checking the formats of  AMKA/username before deleting doctor,patient/admin respectively(server side)

+Fixed values for specialty added on view patient history and view scheduled appointments

+Date input validation updated on view patient history and view scheduled appointments(server side)

+Hints about date format added on view patient history and view scheduled appointments

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_
 Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_/schema/mysql.osA4Bg.meta
 Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_/schema/performance_schema.kIw0nw.meta
 Ergasia3/.idea/dataSources/840ee6ad-c07a-48d3-a70b-203242c5961e/storage_v2/_src_/schema/sys.zb4BAA.meta
+Ergasia3/.idea/dataSources.local.xml
+Ergasia3/.idea/runConfigurations/Tomcat_8_5_65.xml
